Fri Oct 25 08:17:43 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Dynamic.cpp:
        * ace/SSL/SSL_Context.cpp:
          Fixed singleton macros

Wed Oct 23 13:26:02 UTC 2013  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * bin/fuzz.pl:
        ACE_HAS_EXPLICIT_TEMPLATE_INSTANTIATION macro no longer deprecated

Wed Oct 23 08:28:29 UTC 2013  Marijke Hengstmengel  <MHengstmengel.remedy.nl>

        * ace/Based_Pointer_Repository.cpp:

        * ace/Compression/rle/RLECompressor.cpp:

        * ace/Dynamic.cpp:
        * ace/Lib_Find.cpp:
        * ace/Obstack_T.cpp:

        * ace/SSL/SSL_Context.cpp:

        * ace/UUID.cpp:
        * ace/config-android.h:
        * ace/config-macros.h:

        * apps/JAWS3/jaws3/Templates.cpp:

        * apps/drwho/File_Manager.cpp:

        * bin/PerlACE/Process_Unix.pm:
        * bin/PerlACE/TestTarget.pm:
        * bin/PerlACE/TestTarget_Android.pm:

        * bin/auto_run_tests.pl:

        * examples/APG/Logging/Use_LogManager.cpp:

        * examples/APG/Timers/PTimerDispatcher.cpp:
        * examples/APG/Timers/TimerDispatcher.cpp:

        * examples/C++NPv2/TP_Logging_Server.cpp:

        * examples/Export/dll.cpp:

        * examples/IPC_SAP/SOCK_SAP/CPP-inclient.cpp:
        * examples/IPC_SAP/SOCK_SAP/CPP-inserver-fancy.cpp:

        * examples/Logger/Acceptor-server/server_loggerd.cpp:

        * examples/Logger/simple-server/server_loggerd.cpp:

        * examples/Threads/auto_event.cpp:
        * examples/Threads/tss2.cpp:

        * examples/Web_Crawler/Command_Processor.cpp:

        * performance-tests/Misc/test_singleton.cpp:

        * tests/MEM_Stream_Test.cpp:
        * tests/Process_Strategy_Test.cpp:

        Changes for ANDROID CIAO port with native android


      commit 43a2b2dfd3cc68ed5c30f4d8994a36183d972202
      Author: Marijke Hengstmengel <MHengstmengel@remedy.nl>
      Date:   Wed Oct 16 12:40:58 2013 +0200
              Removed my_test.lst