@@ -757,6 +757,13 @@ project(Compiler_Features_27_Test) : acetest {
   }
 }
 
+project(Compiler_Features_28_Test) : acetest {
+  exename = Compiler_Features_28_Test
+  Source_Files {
+    Compiler_Features_28_Test.cpp
+  }
+}
+
 project(Config Test) : acetest {
   avoids += ace_for_tao
   exename = Config_Test
